--- a/Modelando_Dominios/PaymentContext.Tests/PaymentContext.Tests.csproj
+++ b/Modelando_Dominios/PaymentContext.Tests/PaymentContext.Tests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PaymentContext.Domain\PaymentContext.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
